projects/vb6parse/snapshots/syntax/statements/system_interaction/stop/stop_inline_if.snap
---
source: projects/vb6parse/src/syntax/statements/system_interaction/stop.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: IfStatement
      children:
        - kind: IfKeyword
          text: If
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: debug
        - kind: Whitespace
          text: " "
        - kind: ThenKeyword
          text: Then
        - kind: Whitespace
          text: " "
        - kind: StopStatement
          children:
            - kind: StopKeyword
              text: Stop
        - kind: Newline
          text: "\n"
